started from scratch

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,278 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>Flaunt</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="../css/animate.min.css" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../css/material-icons.css" />
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap-material-design.min.css" />
-    <link rel="stylesheet" type="text/css" href="../css/ripples.min.css" />
-    <link rel="stylesheet" type="text/css" href="../css/iconfont-style.css" />
-    <link rel="stylesheet" type="text/css" href="../css/app.css" />
-
+    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../css/app.css">
 </head>
 
-<!--<body ng-app="ChicApp" data-spy="scroll" data-target=".navbar" data-offset="50">-->
-
-<body ng-app="ChicApp">
-
-    <!--Navbar START -->
-    <div class="container-fluid" id="navigation-bar">
-        <div class="row">
-            <div class="col-md-12">
-                <nav class="navbar navbar-default navbar-fixed-top">
-                    <div class="container-fluid">
-                        <div class="row">
-                            <div class="col-md-2"></div>
-                            <div class="col-md-8">
-                                <!-- Brand and toggle get grouped for better mobile display -->
-                                <div class="navbar-header">
-                                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                                        <span class="sr-only">Toggle navigation</span>
-                                        <span class="icon-bar"></span>
-                                        <span class="icon-bar"></span>
-                                        <span class="icon-bar"></span>
-                                    </button>
-                                    <a class="navbar-brand" href="/">
-                                        <!--The image was generated using http://cooltext.com-->
-                                        <!--<img src="../images/saawariya.png"></img>-->
-                                        <img src="../images/flaunt.jpg" class="img-responsive">
-                                        <!--<span>Saawariya</span>-->
-                                    </a>
-                                </div>
-
-                                <!-- Collect the nav links, forms, and other content for toggling -->
-                                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                                    <ul class="nav navbar-nav navbar-right">
-                                        <li>
-                                            <a href="#collections">
-                                                <span>Collections</span>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#stores">
-                                                <span>Stores</span>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#contact">
-                                                <span>Contact</span>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="/bloglist">
-                                                <span>Blog</span>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#" data-toggle="modal" data-target="#login-modal">
-                                                <span>Login</span>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#" data-toggle="modal" data-target="#signup-modal">
-                                                <span>Signup</span>
-                                            </a>
-
-                                        </li>
-                                    </ul>
-                                </div>
-                                <!-- /.navbar-collapse -->
-                            </div>
-                            <!-- /.container-fluid -->
-                        </div>
-                        <div class="col-md-2"></div>
-                    </div>
-
-                </nav>
-            </div>
-        </div>
-    </div>
-    <!--Navbar END -->
-
+<body ng-app="flauntapp">
     <ui-view></ui-view>
-
-
-
-    <footer class="wow fadeIn container-fluid" id="contact" data-wow-delay="1s">
-        <div class="panel panel-default">
-            <div class="panel-body">
-                <div class="container">
-                    <div class="col-md-4">
-                        <h4>Pages</h4>
-
-                        <ul>
-                            <li><a href="text.html">About us</a>
-                            </li>
-                            <li><a href="text.html">Terms and conditions</a>
-                            </li>
-                            <li><a href="faq.html">FAQ</a>
-                            </li>
-                            <li><a href="contact.html">Contact us</a>
-                            </li>
-                        </ul>
-
-                        <hr>
-
-                        <h4>User section</h4>
-
-                        <ul>
-                            <li><a href="#" data-toggle="modal" data-target="#login-modal">Login</a>
-                            </li>
-                            <li><a href="" data-toggle="modal" data-target="#signup-modal">Register</a>
-                            </li>
-                        </ul>
-
-                    </div>
-                    <div class="col-md-4">
-                        <h4>Where to find us</h4>
-
-                        <p><strong>pack technologies</strong>
-                            <br>13/25 New Avenue
-                            <br>New Heaven
-                            <br>45Y 73J
-                            <br>England
-                            <br>
-                            <strong>Great Britain</strong>
-                        </p>
-
-                        <a href="/contact">Go to contact page</a>
-
-                    </div>
-                    <div class="col-md-4">
-                        <h4>Get the news</h4>
-
-                        <p class="text-muted">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
-
-                        <form>
-                            <div class="input-group">
-                                <input type="text" class="form-control">
-                                <span class="input-group-btn">
-                            <button class="btn btn-default" type="button">Subscribe!</button>
-                        </span>
-
-                            </div>
-                            <!-- /input-group -->
-                        </form>
-                        <hr>
-                        <h4>Stay in touch</h4>
-                        <p class="social">
-                            <a href="#" class="facebook external" data-animate-hover="shake"><i class="fa fa-facebook"></i></a>
-                            <a href="#" class="twitter external" data-animate-hover="shake"><i class="fa fa-twitter"></i></a>
-                            <a href="#" class="instagram external" data-animate-hover="shake"><i class="fa fa-instagram"></i></a>
-                            <a href="#" class="gplus external" data-animate-hover="shake"><i class="fa fa-google-plus"></i></a>
-                            <a href="#" class="email external" data-animate-hover="shake"><i class="fa fa-envelope"></i></a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </footer>
-
-    <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="Login" aria-hidden="true">
-        <div class="modal-dialog modal-sm">
-
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close pull-right" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4>Customer Login</h4>
-                </div>
-                <div class="modal-body">
-                    <form action="customer-orders.html" method="post">
-                        <div class="form-group login-form-input">
-                            <input type="text" class="form-control" id="email-modal" placeholder="email">
-                        </div>
-                        <div class="form-group login-form-input">
-                            <input type="password" class="form-control" id="password-modal" placeholder="password">
-                        </div>
-
-                        <p class="text-center">
-                            <button class="filter btn btn-primary"><i class="fa fa-sign-in"></i> Log in</button>
-                        </p>
-
-                    </form>
-
-                    <p class="text-center text-muted">Not registered yet?</p>
-                    <p class="text-center text-muted"><a href="register.html"><strong>Register now</strong></a>! It is easy and done in 1&nbsp;minute and gives you access to special discounts and much more!</p>
-
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="modal fade" id="signup-modal" tabindex="-1" role="dialog" aria-labelledby="Signup" aria-hidden="true">
-        <div class="modal-dialog modal-sm">
-
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close pull-right" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4>Sign Up</h4>
-                </div>
-                <div class="modal-body">
-                    <form action="customer-orders.html" method="post">
-                        <div class="form-group login-form-input">
-                            <input type="text" class="form-control" id="name-modal" placeholder="name">
-                        </div>
-                        <div class="form-group login-form-input">
-                            <input type="text" class="form-control" id="email-modal" placeholder="email">
-                        </div>
-                        <div class="form-group login-form-input">
-                            <input type="password" class="form-control" id="password-modal" placeholder="password">
-                        </div>
-
-                        <p class="text-center">
-                            <button class="filter btn btn-primary"><i class="fa fa-user-md"></i>Sign Up</button>
-                        </p>
-
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-
 
     <script src="../js/lib/jquery.min.js"></script>
     <script src="../js/lib/bootstrap.min.js"></script>
-    <script src="../js/lib/angular.min.js "></script>
-    <script src="../js/lib/angular-ui-router.min.js "></script>
-    <script src="../js/lib/material.min.js"></script>
-    <script src="../js/lib/ripples.min.js"></script>
-    <script src="../js/factories/ProductFactory.js"></script>
-    <script src="../js/modules/home.js "></script>
-    <script src="../js/modules/collections.js"></script>
-    <script src="../js/lib/wow.js"></script>
-    <script>
-        new WOW().init();
-
-        $(document).ready(function() {
-
-            console.log("Width: " + screen.width);
-            if (screen.width < 400) {
-                console.log("Width less than 400");
-                $('.item').removeClass('col-xs-6').addClass('col-xs-12');
-                $('.item').hide();
-            }
-            $('a[href^="#"]').on('click', function() {
-                var target = $($(this).attr('href'));
-                if (target.length) {
-                    event.preventDefault();
-                    $('html, body').animate({
-                        scrollTop: target.offset().top
-                    }, 1000);
-                }
-            })
-
-            /*$('.navbar').on('activate.bs.scrollspy', function(e) { console.log('SCrollspy: ' + Object.keys(e.currentTarget)); $("#contact").trigger("click"); })*/
-
-        });
-
-    </script>
-    <script src="../js/app.js "></script>
+    <script src="../js/lib/angular.min.js"></script>
+    <script src="../js/lib/angular-ui-router.min.js"></script>
+    <script src="../js/modules/signup.js"></script>
+    <script src="../js/modules/home.js"></script>
+    <script src="../js/modules/login.js"></script>
+    <script src="../js/app.js"></script>
 </body>
 
 </html>
