--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,124 +1,16 @@
-<div class="container no-display">
+<div class="container">
     <div class="row">
-        <div id="myCarousel" class="carousel slide" data-ride="carousel">
-            <!-- Indicators -->
-            <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-                <li data-target="#myCarousel" data-slide-to="2"></li>
-                <li data-target="#myCarousel" data-slide-to="3"></li>
-            </ol>
-
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner" role="listbox">
-                <div class="item text-center">
-                    <div class="carousel-div">
-                        <img src="../images/snappa_1.png" alt="Chania" class="img-responsive">
-                        <h1 class="img_description text-left">Always Welcome</h1>
-                    </div>
-                </div>
-
-                <div class="item">
-                    <div class="row">
-                        <div class="col-md-12 text-center">
-                            <div class="carousel-div">
-                                <img src="../images/leisure_at_deck.jpg" alt="Chania" class="img-responsive">
-                                <h1 class="img_description">Boredom got new look!</h1>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="item">
-                    <div class="row">
-                        <div class="col-md-12 text-center">
-                            <div class="carousel-div">
-                                <img src="../images/rose_smells_rose.jpg" alt="Flower" class="img-responsive">
-                                <h1 class="img_description">The flowers found a mirror image.</h1>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="item active">
-                    <div class="row">
-                        <div class="col-md-12 text-center">
-                            <div class="carousel-div">
-                                <img src="../images/stroll_in_grass.jpg" alt="Flower" class="img-responsive">
-                                <h1 class="img_description">Seclusion is always selective!</h1>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
+        <div class="col-md-4"></div>
+        <div class="col-md-4 text-center">
+            <div ng-show="toBeShown">
+                <h1>Home</h1>
+                <button ng-click="login()" class="btn btn-primary">Login</button>
+                <button ng-click="signup()" class="btn btn-primary">Signup</button>
             </div>
+
+            <ui-view></ui-view>
+
         </div>
+        <div class="col-md-4"></div>
     </div>
 </div>
-
-<section id="collections">
-    <div class="container">
-
-        <div class="well well-sm text-center">
-            <h1 class="title">Collections</h1>
-        </div>
-
-        <div class="row">
-            <div class="col-xs-6 col-sm-6 col-md-3 item" ng-repeat="i in products">
-                <div class="wow fadeIn panel panel-default product" data-wow-delay="1s" align="center" ng-click="showProduct()">
-                    <div class="panel-body">
-                        <img ng-src="../images/screens/{{i.image}}.jpg" class="img-responsive" />
-                    </div>
-                    <div class="panel-footer">
-                        <span class="text-left">
-                            <h3 class="item-name"><small>{{i.name}}</small></h3>
-                            <p>&#8377; {{i.price}}</p>
-                        </span>
-                        <span class="shopping_cart glyphicons glyphicons-play">
-                            <!--<i class="material-icons  text-center">shopping_cart</i>-->
-                        </span>
-                        <!--<a href="#" class="btn btn-sm btn-primary"><i class="icon icon-basket"></i>Buy</a>-->
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section id="stores">
-    <div class="container">
-        <div class="well well-sm text-center">
-            <h1 class="title">Stores</h1>
-        </div>
-
-        <div class="row">
-            <div class="col-xs-6 col-sm-6 col-md-3 item" ng-repeat="i in stores">
-                <div class="wow fadeIn panel panel-default" data-wow-delay="1s" align="center">
-                    <div class="panel-body">
-                        <img ng-src="../images/stores/{{i.image}}.jpg" class="img-responsive" />
-                    </div>
-                    <div class="panel-footer">
-                        <span class="text-center">
-                        <h4 class="item-name">{{i.name}}</h4>
-                    </span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-<script>
-    $(document).ready(function() {
-
-        console.log("Width: " + screen.width);
-        if (screen.width < 400) {
-            console.log("Width less than 400");
-            $('.item').removeClass('col-xs-6').addClass('col-xs-12');
-            /*$('.item').hide();*/
-        }
-
-    });
-
-</script>
