--- a/public/views/home.html
+++ b/public/views/home.html
@@ -4,8 +4,9 @@
         <div class="col-md-4 text-center">
             <div ng-show="toBeShown">
                 <h1>Home</h1>
-                <button ng-click="login()" class="btn btn-primary">Login</button>
-                <button ng-click="signup()" class="btn btn-primary">Signup</button>
+                <button ng-click="login()" ng-hide="isLoggedIn" class="btn btn-primary">Login</button>
+                <button ng-click="signup()" ng-hide="isLoggedIn" class="btn btn-primary">Signup</button>
+                <button ng-click="logout()" ng-show="isLoggedIn" class="btn btn-primary">Logout</button>
             </div>
 
             <ui-view></ui-view>
