--- a/public/views/index.html
+++ b/public/views/index.html
@@ -14,6 +14,7 @@
     <script src="../js/lib/bootstrap.min.js"></script>
     <script src="../js/lib/angular.min.js"></script>
     <script src="../js/lib/angular-ui-router.min.js"></script>
+    <script src="../js/factories/authfactory.js"></script>
     <script src="../js/modules/signup.js"></script>
     <script src="../js/modules/home.js"></script>
     <script src="../js/modules/login.js"></script>
