--- a/public/views/signup.html
+++ b/public/views/signup.html
@@ -1,7 +1,7 @@
-<!--<div class="container">
+<div class="container">
     <div class="row">
         <div class="col-md-4"></div>
-        <div class="col-md-4">-->
+        <div class="col-md-4">
             <legend>
                 <h1>{{name}}</h1></legend>
             <form ng-submit="signup(user)">
@@ -18,6 +18,7 @@
                     <div class="form-group text-center">
                         <button type="button" class="btn btn-default">Cancel</button>
                         <button type="submit" class="btn btn-primary">Signup</button>
+                        <p class="text-danger">{{errorMessage}}</p>
                     </div>
                 </fieldset>
             </form>
@@ -25,8 +26,7 @@
                 Already had an account?
                 <input type="button" class="btn btn-default" value="Login" ng-click="login()">
             </div>
-<!--
+        </div>
+        <div class="col-md-4"></div>
+    </div>
 </div>
-<div class="col-md-4"></div>
-</div>
-</div>-->
