--- a/public/views/index.html
+++ b/public/views/index.html
@@ -3,12 +3,144 @@
 
 <head>
     <title>Flaunt</title>
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="../css/app.css">
 </head>
 
 <body ng-app="flauntapp">
-    <ui-view></ui-view>
+
+    <nav class="navbar navbar-default navbar-fixed-top" ng-controller="NavbarCtrl">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-8">
+                    <!-- Brand and toggle get grouped for better mobile display -->
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="/">
+                            <h1>Flaunt</h1>
+                        </a>
+                    </div>
+
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <ul class="nav navbar-nav navbar-right">
+                            <li>
+                                <a href="#collections">
+                                    <span>Collections</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#stores">
+                                    <span>Stores</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#contact">
+                                    <span>Contact</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="/bloglist">
+                                    <span>Blog</span>
+                                </a>
+                            </li>
+                            <li ng-hide="hide">
+                                <a href="#" data-toggle="modal" data-target="#login-modal">
+                                    <span class="glyphicon glyphicon-log-in"></span>Login
+                                </a>
+                            </li>
+                            <li ng-hide="hide">
+                                <a href="#" data-toggle="modal" data-target="#signup-modal">
+                                    <span class="glyphicon glyphicon-user"></span>Signup
+                                </a>
+
+                            </li>
+                            <li ng-show="hide">
+                                <a href="#" ng-click="logout()">
+                                    <span class="glyphicon glyphicon-log-in"></span>Logout
+                                </a>
+
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- /.navbar-collapse -->
+                </div>
+                <!-- /.container-fluid -->
+            </div>
+            <div class="col-md-2"></div>
+        </div>
+    </nav>
+
+    <div class="container main-content">
+        <ui-view></ui-view>
+    </div>
+
+    <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="Login" aria-hidden="true" ng-controller="LoginCtrl">
+        <div class="modal-dialog modal-sm">
+
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close pull-right" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h3>Login</h3>
+                </div>
+                <div class="modal-body">
+                    <form ng-submit="login(user)">
+                        <div class="form-group login-form-input">
+                            <input type="text" class="form-control" id="email-modal" placeholder="email" ng-model="user.username">
+                        </div>
+                        <div class="form-group login-form-input">
+                            <input type="password" class="form-control" id="password-modal" placeholder="password" ng-model="user.password">
+                        </div>
+
+                        <p class="text-center">
+                            <button class="filter btn btn-primary" type="submit"><i class="fa fa-sign-in"></i> Log in</button>
+                        </p>
+
+                    </form>
+
+                    <p class="text-center text-muted">Not registered yet?</p>
+                    <p class="text-center text-muted"><a href="register.html"><strong>Register now</strong></a>! It is easy and done in 1&nbsp;minute and gives you access to special discounts and much more!</p>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="signup-modal" tabindex="-1" role="dialog" aria-labelledby="Signup" aria-hidden="true" ng-controller="SignupCtrl">
+        <div class="modal-dialog modal-sm">
+
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close pull-right" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4>Sign Up</h4>
+                </div>
+                <div class="modal-body">
+                    <form ng-submit="signup(user)">
+                        <div class="form-group login-form-input">
+                            <input type="text" class="form-control" id="email-modal" placeholder="email" ng-model="user.username">
+                        </div>
+                        <div class="form-group login-form-input">
+                            <input type="password" class="form-control" id="password-modal" placeholder="password" ng-model="user.password">
+                        </div>
+
+                        <p class="text-center">
+                            <button class="filter btn btn-primary"><i class="fa fa-user-md"></i>Sign Up</button>
+                        </p>
+
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <script src="../js/lib/jquery.min.js"></script>
     <script src="../js/lib/bootstrap.min.js"></script>
@@ -16,6 +148,7 @@
     <script src="../js/lib/angular-ui-router.min.js"></script>
     <script src="../js/factories/authfactory.js"></script>
     <script src="../js/modules/signup.js"></script>
+    <script src="../js/modules/navbar.js"></script>
     <script src="../js/modules/home.js"></script>
     <script src="../js/modules/login.js"></script>
     <script src="../js/app.js"></script>
