--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,17 +1,34 @@
 a.navbar-brand {
-    padding: 5px 0;
+    padding: 10px 0 0 0;
 }
 h1,
 h3 {
     padding: 0;
     margin: 0;
 }
-ul.nav a {
-    font-size: 20px;
+
+/*------------navigation bar---------------*/
+
+ul.nav>li>a {
+    padding: 15px 0;
 }
+ul.nav>li>a>span {
+    padding: 0 10px;
+    border-right: 1px solid black;
+}
+ul.nav>li:nth-last-child(-n+2)>a>span {
+    padding: 0 10px;
+    border-right: none;
+}
+
+/*------------glyphicon---------------*/
+
 .glyphicon {
     margin: auto 5px;
 }
+
+/*------------main-content---------------*/
+
 .main-content {
     margin-top: 5%;
 }
@@ -24,4 +41,21 @@ ul.nav a {
     .main-content {
         margin-top: 15%;
     }
+}
+
+/*------search bar-----------*/
+
+.search-bar {
+    position: relative;
+    margin: 10px 100px 0 0;
+    width: 550px;
+}
+.search-bar input {
+    padding-right: 30px;
+}
+.search-bar span {
+    position: absolute;
+    right: 0px;
+    padding: 10px 12px;
+    pointer-events: none;
 }
