--- a/public/views/index.html
+++ b/public/views/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Flaunt</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="../css/app.css">
 </head>
@@ -32,7 +32,7 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav navbar-right">
-                            <li>
+                            <!--<li>
                                 <a href="#collections">
                                     <span>Collections</span>
                                 </a>
@@ -46,26 +46,33 @@
                                 <a href="#contact">
                                     <span>Contact</span>
                                 </a>
+                            </li>-->
+                            <li ng-cloak>
+                                <div class="search-bar">
+                                    <span class="glyphicon glyphicon-search"></span>
+                                    <input type="search" class="form-control" placeholder="Search" />
+                                </div>
+
                             </li>
-                            <li>
-                                <a href="/bloglist">
+                            <li ng-cloak>
+                                <a href="/bloglist" class="text-center">
                                     <span>Blog</span>
                                 </a>
                             </li>
-                            <li ng-hide="hide">
+                            <li ng-hide="hide" ng-cloak>
                                 <a href="#" data-toggle="modal" data-target="#login-modal">
-                                    <span class="glyphicon glyphicon-log-in"></span>Login
+                                    <span>Login</span>
                                 </a>
                             </li>
-                            <li ng-hide="hide">
+                            <li ng-hide="hide" ng-cloak>
                                 <a href="#" data-toggle="modal" data-target="#signup-modal">
-                                    <span class="glyphicon glyphicon-user"></span>Signup
+                                    <span>Signup</span>
                                 </a>
 
                             </li>
-                            <li ng-show="hide">
+                            <li ng-show="hide" ng-cloak>
                                 <a href="#" ng-click="logout()">
-                                    <span class="glyphicon glyphicon-log-in"></span>Logout
+                                    <span>Logut</span>
                                 </a>
 
                             </li>
@@ -78,6 +85,8 @@
             <div class="col-md-2"></div>
         </div>
     </nav>
+
+
 
     <div class="container main-content">
         <ui-view></ui-view>
