--- a/public/css/app.css
+++ b/public/css/app.css
@@ -37,18 +37,37 @@ ul.nav>li:nth-last-child(-n+2)>a>span {
         margin-top: 10%;
     }
 }
-@media screen and (max-width: 480px) {
-    .main-content {
-        margin-top: 15%;
-    }
-}
 
 /*------search bar-----------*/
 
 .search-bar {
     position: relative;
-    margin: 10px 100px 0 0;
-    width: 550px;
+    margin: 10px 0 0 0;
+    width: 500px;
+}
+@media screen and (max-width: 1700px) {
+    .search-bar {
+        margin: 10px 60px 0 0;
+        width: 550px;
+    }
+}
+@media screen and (max-width: 1500px) {
+    .search-bar {
+        margin: 10px 30px 0 0;
+        width: 500px;
+    }
+}
+@media screen and (max-width: 1024px) {
+    .search-bar {
+        margin: 10px 0 0 0;
+        width: 400px;
+    }
+}
+@media screen and (max-width: 800px) {
+    .search-bar {
+        margin: 10px 0 0 0;
+        width: 300px;
+    }
 }
 .search-bar input {
     padding-right: 30px;
