--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9,16 +9,31 @@ h3 {
 
 /*------------navigation bar---------------*/
 
+.navbar {
+    margin: 0;
+}
 ul.nav>li>a {
     padding: 15px 0;
 }
 ul.nav>li>a>span {
     padding: 0 10px;
+}
+ul.navbar-right>li>a>span {
     border-right: 1px solid black;
 }
-ul.nav>li:nth-last-child(-n+2)>a>span {
-    padding: 0 10px;
+ul.navbar-right>li:nth-last-child(-n+2)>a>span {
     border-right: none;
+}
+
+/*------------Categories---------------*/
+
+.categories label:hover {
+    cursor: pointer;
+}
+.categories label {
+    padding: 10px;
+    font-size: 16px;
+    color: gray;
 }
 
 /*------------glyphicon---------------*/
