Implemented carousel-slider for clothing and bags section. Added Footer

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,6 @@
+.container-fluid {
+    padding: 0;
+}
 a.navbar-brand {
     padding: 10px 0 0 0;
 }
@@ -32,25 +35,15 @@ ul.navbar-right>li:nth-last-child(-n+2)>a>span {
 }
 .categories label {
     padding: 10px;
-    font-size: 16px;
+    font-size: 16;
     color: gray;
 }
 
-/*------------glyphicon---------------*/
+/*------------carousel---------------*/
 
-.glyphicon {
-    margin: auto 5px;
-}
-
-/*------------main-content---------------*/
-
-.main-content {
-    margin-top: 5%;
-}
-@media screen and (max-width: 600px) {
-    .main-content {
-        margin-top: 10%;
-    }
+.carousel-caption {
+    color: white;
+    padding-bottom: 20%;
 }
 
 /*------search bar-----------*/
@@ -92,4 +85,45 @@ ul.navbar-right>li:nth-last-child(-n+2)>a>span {
     right: 0px;
     padding: 10px 12px;
     pointer-events: none;
+}
+
+/*-----------clothing carousel-----------*/
+
+.well {
+    background: transparent;
+    border: none;
+    margin: 40px 0 0 0;
+}
+.panel {
+    margin-bottom: 0;
+}
+.product .panel-body {
+    padding: 0;
+}
+.product .panel-body:hover {
+    cursor: pointer;
+}
+.product .panel-body>img {
+    width: 100%;
+}
+.product .panel-footer {
+    position: relative;
+}
+.product .panel-footer span.shopping_cart {
+    position: absolute;
+    top: 20%;
+    right: 5%;
+    font-size: 40px;
+}
+span.shopping_cart:hover {
+    cursor: pointer;
+}
+
+/*-----------Footer-----------*/
+
+footer {
+    margin-top: 40px;
+}
+footer .panel {
+    border: none;
 }
