--- a/public/views/index.html
+++ b/public/views/index.html
@@ -86,9 +86,86 @@
         </div>
     </section>
 
-    <div class="container main-content">
+    <div class="container-fluid main-content">
         <ui-view></ui-view>
     </div>
+
+    <footer class="wow fadeIn container-fluid" id="contact" data-wow-delay="1s">
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <hr>
+                <div class="container">
+                    <div class="col-md-4">
+                        <h4>Pages</h4>
+
+                        <ul>
+                            <li><a href="text.html">About us</a>
+                            </li>
+                            <li><a href="text.html">Terms and conditions</a>
+                            </li>
+                            <li><a href="faq.html">FAQ</a>
+                            </li>
+                            <li><a href="contact.html">Contact us</a>
+                            </li>
+                        </ul>
+
+                        <hr>
+
+                        <h4>User section</h4>
+
+                        <ul>
+                            <li><a href="#" data-toggle="modal" data-target="#login-modal">Login</a>
+                            </li>
+                            <li><a href="" data-toggle="modal" data-target="#signup-modal">Register</a>
+                            </li>
+                        </ul>
+
+                    </div>
+                    <div class="col-md-4">
+                        <h4>Where to find us</h4>
+
+                        <p><strong>pack technologies</strong>
+                            <br>13/25 New Avenue
+                            <br>New Heaven
+                            <br>45Y 73J
+                            <br>England
+                            <br>
+                            <strong>Great Britain</strong>
+                        </p>
+
+                        <a href="/contact">Go to contact page</a>
+
+                    </div>
+                    <div class="col-md-4">
+                        <h4>Get the news</h4>
+
+                        <p class="text-muted">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+
+                        <form>
+                            <div class="input-group">
+                                <input type="text" class="form-control">
+                                <span class="input-group-btn">
+                            <button class="btn btn-default" type="button">Subscribe!</button>
+                        </span>
+
+                            </div>
+                            <!-- /input-group -->
+                        </form>
+                        <hr>
+                        <h4>Stay in touch</h4>
+                        <p class="social">
+                            <a href="#" class="facebook external" data-animate-hover="shake"><i class="fa fa-facebook"></i></a>
+                            <a href="#" class="twitter external" data-animate-hover="shake"><i class="fa fa-twitter"></i></a>
+                            <a href="#" class="instagram external" data-animate-hover="shake"><i class="fa fa-instagram"></i></a>
+                            <a href="#" class="gplus external" data-animate-hover="shake"><i class="fa fa-google-plus"></i></a>
+                            <a href="#" class="email external" data-animate-hover="shake"><i class="fa fa-envelope"></i></a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </footer>
 
     <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="Login" aria-hidden="true" ng-controller="LoginCtrl">
         <div class="modal-dialog modal-sm">
