Implemented Angular Directive for float label to be used in Forms

--- a/public/app/views/home.html
+++ b/public/app/views/home.html
@@ -11,7 +11,7 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
                 <div class="item text-center active">
-                    <img src="../images/image1.jpg" alt="Chania" class="img-responsive">
+                    <img src="../../images/image1.jpg" alt="Chania" class="img-responsive">
                     <div class="carousel-caption">
                         <h1 class="img_description text-left">Always Welcome</h1>
                     </div>
@@ -20,7 +20,7 @@
                 <div class="item">
                     <div class="row">
                         <div class="col-md-12 text-center">
-                            <img src="../images/image2.jpg" alt="Chania" class="img-responsive">
+                            <img src="../../images/image2.jpg" alt="Chania" class="img-responsive">
                             <div class="carousel-caption">
                                 <h1 class="img_description">Boredom got new look!</h1>
                             </div>
@@ -31,24 +31,14 @@
                 <div class="item">
                     <div class="row">
                         <div class="col-md-12 text-center">
-                            <img src="../images/image3.jpg" alt="Flower" class="img-responsive">
+                            <img src="../../images/image3.jpg" alt="Flower" class="img-responsive">
                             <div class="carousel-caption">
                                 <h1 class="img_description">The flowers found a mirror image.</h1>
                             </div>
                         </div>
                     </div>
                 </div>
-                <!--
-                <div class="item active">
-                    <div class="row">
-                        <div class="col-md-12 text-center">
-                            <div class="carousel-div">
-                                <img src="../images/stroll_in_grass.jpg" alt="Flower" class="img-responsive">
-                                <h1 class="img_description">Seclusion is always selective!</h1>
-                            </div>
-                        </div>
-                    </div>
-                </div>-->
+
                 <!-- Controls -->
                 <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
                     <span class="glyphicon glyphicon-chevron-left"></span>
@@ -78,7 +68,7 @@
                             <div class="col-md-3" ng-repeat="i in products[0]">
                                 <div class="wow fadeIn panel panel-default product" data-wow-delay="1s" align="center" ng-click="showProduct()">
                                     <div class="panel-body">
-                                        <img ng-src="../images/screens/{{i.image}}.jpg" class="img-responsive" />
+                                        <img ng-src="../../images/screens/{{i.image}}.jpg" class="img-responsive" />
                                     </div>
                                     <div class="panel-footer">
                                         <span class="text-left">
@@ -98,7 +88,7 @@
                             <div class="col-md-3" ng-repeat="i in products[1]">
                                 <div class="wow fadeIn panel panel-default product" data-wow-delay="1s" align="center" ng-click="showProduct()">
                                     <div class="panel-body">
-                                        <img ng-src="../images/screens/{{i.image}}.jpg" class="img-responsive" />
+                                        <img ng-src="../../images/screens/{{i.image}}.jpg" class="img-responsive" />
                                     </div>
                                     <div class="panel-footer">
                                         <span class="text-left">
@@ -142,7 +132,7 @@
                             <div class="col-md-3" ng-repeat="i in bags[0]">
                                 <div class="wow fadeIn panel panel-default product" data-wow-delay="1s" align="center" ng-click="showProduct()">
                                     <div class="panel-body">
-                                        <img ng-src="../images/screens/{{i.image}}.jpg" class="img-responsive" />
+                                        <img ng-src="../../images/screens/{{i.image}}.jpg" class="img-responsive" />
                                     </div>
                                     <div class="panel-footer">
                                         <span class="text-left">
@@ -162,7 +152,7 @@
                             <div class="col-md-3" ng-repeat="i in bags[1]">
                                 <div class="wow fadeIn panel panel-default product" data-wow-delay="1s" align="center" ng-click="showProduct()">
                                     <div class="panel-body">
-                                        <img ng-src="../images/screens/{{i.image}}.jpg" class="img-responsive" />
+                                        <img ng-src="../../images/screens/{{i.image}}.jpg" class="img-responsive" />
                                     </div>
                                     <div class="panel-footer">
                                         <span class="text-left">
