--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -5,8 +5,11 @@
     <title>Flaunt</title>
     <meta charset="utf-8">
     <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="../css/app.css">
+    <link rel="stylesheet" href="/lib/css/bootstrap.min.css">
+    <!--<link rel="stylesheet" type="text/css" href="/lib/css/float-label.css">-->
+    <link rel="stylesheet" type="text/css" href="/lib/css/float-label2.css">
+    <link rel="stylesheet" type="text/css" href="/lib/css/main.css">
+    <link rel="stylesheet" type="text/css" href="/app/css/app.css">
 </head>
 
 <body ng-app="flauntapp">
@@ -176,18 +179,27 @@
                     <h3>Login</h3>
                 </div>
                 <div class="modal-body">
-                    <form ng-submit="login(user)">
-                        <div class="form-group login-form-input">
-                            <input type="text" class="form-control" id="email-modal" placeholder="email" ng-model="user.username">
+                    <!--<form ng-submit="login(user)" class="go-bottom">
+                        <div class="form-group login-form-input textinput">
+                            <input type="text" name="email-modal" class="form-control" id="email-modal" ng-model="user.username" required>
+                            <label for="email-modal">email</label>
                         </div>
                         <div class="form-group login-form-input">
-                            <input type="password" class="form-control" id="password-modal" placeholder="password" ng-model="user.password">
+                            <input type="password" name="password-modal" class="form-control" id="password-modal" ng-model="user.password" required>
+                            <label for="password-modal">password</label>
                         </div>
 
                         <p class="text-center">
-                            <button class="filter btn btn-primary" type="submit"><i class="fa fa-sign-in"></i> Log in</button>
+                            <button class="filter btn btn-primary btn-block" type="submit"><i class="fa fa-sign-in"></i> Log in</button>
                         </p>
 
+                    </form>-->
+                    <form ng-submit="login(user)">
+                        <float-label id="email" type="email" label-text="email" ng-model="user.username"></float-label>
+                        <float-label id="password" type="password" label-text="password" ng-model="user.password"></float-label>
+                        <p class="text-center">
+                            <button class="filter btn btn-primary btn-block" type="submit"><i class="fa fa-sign-in"></i> Log in</button>
+                        </p>
                     </form>
 
                     <p class="text-center text-muted">Not registered yet?</p>
@@ -204,38 +216,68 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close pull-right" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4>Sign Up</h4>
+                    <h3>Sign Up</h3>
                 </div>
                 <div class="modal-body">
-                    <form ng-submit="signup(user)">
+
+                    <!--                    <form ng-submit="signup(user)" class="go-bottom">
                         <div class="form-group login-form-input">
-                            <input type="text" class="form-control" id="email-modal" placeholder="email" ng-model="user.username">
+                            <input type="text" name="email-modal" class="form-control" id="email-modal" ng-model="user.username" required>
+                            <label for="email-modal">email</label>
                         </div>
                         <div class="form-group login-form-input">
-                            <input type="password" class="form-control" id="password-modal" placeholder="password" ng-model="user.password">
+                            <input type="password" name="password-modal" class="form-control" id="password-modal" ng-model="user.password" required>
+                            <label for="password-modal">password</label>
                         </div>
 
                         <p class="text-center">
-                            <button class="filter btn btn-primary"><i class="fa fa-user-md"></i>Sign Up</button>
+                            <button class="filter btn btn-primary btn-block" type="submit"><i class="fa fa-sign-in"></i>Signup
+                            </button>
+                        </p>
+
+                    </form>-->
+                    <form ng-submit="signup(user)">
+                        <float-label id="email" type="email" label-text="email" ng-model="user.username"></float-label>
+                        <float-label id="password" type="password" label-text="password" ng-model="user.password"></float-label>
+                        <p class="text-center">
+                            <button class="filter btn btn-primary btn-block" type="submit"><i class="fa fa-sign-in"></i> Signup</button>
                         </p>
 
                     </form>
+
+
                 </div>
             </div>
         </div>
     </div>
 
 
-    <script src="../js/lib/jquery.min.js"></script>
-    <script src="../js/lib/bootstrap.min.js"></script>
-    <script src="../js/lib/angular.min.js"></script>
-    <script src="../js/lib/angular-ui-router.min.js"></script>
-    <script src="../js/factories/authfactory.js"></script>
-    <script src="../js/modules/signup.js"></script>
-    <script src="../js/modules/navbar.js"></script>
-    <script src="../js/modules/home.js"></script>
-    <script src="../js/modules/login.js"></script>
-    <script src="../js/app.js"></script>
+    <!--Javascript Library-->
+    <script src="/lib/js/jquery.min.js"></script>
+    <script src="/lib/js/bootstrap.min.js"></script>
+    <script src="/lib/js/angular.min.js"></script>
+    <script src="/lib/js/angular-ui-router.min.js"></script>
+    <!--app related Javascript-->
+    <script src="/app/js/factories/authfactory.js"></script>
+    <script src="/app/js/modules/signup.js"></script>
+    <script src="/app/js/modules/navbar.js"></script>
+    <script src="/app/js/modules/home.js"></script>
+    <script src="/app/js/modules/login.js"></script>
+    <script src="/lib/js/angular-float-label.js"></script>
+    <script src="/app/js/app.js"></script>
+    <script>
+        $(document).ready(function() {
+            $(".textinput input").change(function() {
+                if ($(this).val() != "") {
+                    $(this).addClass('filled');
+                } else {
+                    $(this).removeClass('filled');
+                }
+            })
+
+        });
+
+    </script>
 </body>
 
 </html>
